Updated the content to the homepage and about index.html

--- a/about/index.html
+++ b/about/index.html
@@ -12,8 +12,8 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="../css/normalize.css">
@@ -23,12 +23,106 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+  <main>
+
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="content-wrapper">
+          <h1>
+            Our Mission - we want to make you the team you always wanted to be.
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis qui consectetur quis corrupti? Explicabo saepe perferendis voluptatum cum exercitationem eius excepturi adipisci odio. Odit, id. Quas soluta laborum molestiae ullam.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis laudantium numquam dolores rerum vero? Impedit, dolorum ducimus distinctio sunt odio hic dolorem labore, inventore nisi esse repudiandae beatae. Magnam, voluptas!
+          </p>
+        </div>
+      </div><!-- mission content wrapper ends-->
+    </section><!--contact info-->
+  
+    <section class="map">
+      <figure>
+
+      </figure>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>
+          Contact us, because you all need this.
+        </h2>
+        <address class="contact-content">
+          <div>
+            <h4>
+              General Information
+            </h4>
+            <p>
+              333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </div>
+          <div>
+            <h4>
+              Chat with a Facilitator
+            </h4>
+            <p>
+              555-555-5556<br>
+              facilitator@unplugged.com
+            </p>
+          </div>
+        </address> <!-- contact-content div ends -->
+      </div> <!-- contact content wrapper ends -->
+    </section>
+  </main> <!-- main wrapper -->
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>
+            Contact
+          </h4>
+          <p>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </address>
+        <div class="social">
+          <div class="social-icons">
+            <h4>Social</h4>
+            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"></a></p>
+            <p><a href="https://github.com/mpedrego" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"></a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>
+          Copyright 2020 | Unplugged
+        </p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
