--- a/faq/index.html
+++ b/faq/index.html
@@ -12,8 +12,8 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="../css/normalize.css">
@@ -23,12 +23,78 @@
 </head>
 
 <body>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-content">
+        <h4>How do I get to the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+      <div class="faq-content">
+        <h4>What kind of team is right for the Unplugged retreat?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+      <div class="faq-content">
+        <h4>What size teams can you accommodate?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua.</p>
+      </div>
+      <div class="faq-content">
+        <h4>Is there really no wifi available?</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+      </div>
+    </div> <!-- faq content wrapper ends -->
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>
+            Contact
+          </h4>
+          <p>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </address>
+        <div class="social">
+          <div class="social-icons">
+            <h4>Social</h4>
+            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"></a></p>
+            <p><a href="https://github.com/mpedrego" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"></a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <p>
+          Copyright 2020 | Unplugged
+        </p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
