--- a/index.html
+++ b/index.html
@@ -67,31 +67,33 @@
   
     <section class="features">
       <div class="content-wrapper">
-        <article>
-          <h2>
-            Have the work week you always dreamed of - without the bad wifi.
-          </h2>
-          <p class="tent-icon"></p>
-          <p class="features-item-description">
-            Locating in a peaceful bungalow outside of Lake Geneva, Wisconsin.
-          </p>
-          <p class="bed-icon"></p>
-          <p class="features-item-description">
-            12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
-          </p>
-          <p class="cutlery-icon"></p>
-          <p class="features-item-description">
-            5 outdoor obstacle courses, including privte beach 1/2 mile from bungalow.
-          </p>
-          <p class="face-icon"></p>
-          <p class="features-item-description">
-            Retreat facilitator to manage your day to day activities so you all get a chance to reset.
-          </p>
-          <p class="wifi-icon"></p>
-          <p class="features-item-description">
-            Dedicated computer room for times that you must wifi.
-          </p>
-        </article>
+        <div class="features-items">
+          <article>
+            <h2>
+              Have the work week you always dreamed of - without the bad wifi.
+            </h2>
+            <p class="tent-icon"></p>
+            <p class="features-item-description">
+              Locating in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+            <p class="bed-icon"></p>
+            <p class="features-item-description">
+              12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+            </p>
+            <p class="cutlery-icon"></p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including privte beach 1/2 mile from bungalow.
+            </p>
+            <p class="face-icon"></p>
+            <p class="features-item-description">
+              Retreat facilitator to manage your day to day activities so you all get a chance to reset.
+            </p>
+            <p class="wifi-icon"></p>
+            <p class="features-item-description">
+              Dedicated computer room for times that you must wifi.
+            </p>
+          </article>
+        </div>
       </div>
     </section>
   
