Edited about and faq  index.html and updated the tablet breakpoint on main.css

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -41,16 +41,17 @@
     <section class="mission">
       <div class="content-wrapper">
         <div class="content-wrapper">
-          <h1>
+          <h2>
             Our Mission - we want to make you the team you always wanted to be.
-          </h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis qui consectetur quis corrupti? Explicabo saepe perferendis voluptatum cum exercitationem eius excepturi adipisci odio. Odit, id. Quas soluta laborum molestiae ullam.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis laudantium numquam dolores rerum vero? Impedit, dolorum ducimus distinctio sunt odio hic dolorem labore, inventore nisi esse repudiandae beatae. Magnam, voluptas!
-          </p>
-        </div>
+          </h2>
+          <div class="mission-content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis qui consectetur quis corrupti? Explicabo saepe perferendis voluptatum cum exercitationem eius excepturi adipisci odio. Odit, id. Quas soluta laborum molestiae ullam.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis laudantium numquam dolores rerum vero? Impedit, dolorum ducimus distinctio sunt odio hic dolorem labore, inventore nisi esse repudiandae beatae. Magnam, voluptas!
+            </p>
+          </div>
       </div><!-- mission content wrapper ends-->
     </section><!--contact info-->
   
@@ -112,11 +113,11 @@
         </div>
       </div>
 
-      <div class="copyright">
-        <p>
-          Copyright 2020 | Unplugged
-        </p>
-      </div>
+    </div>
+    <div class="copyright">
+      <p>
+        Copyright 2020 | Unplugged
+      </p>
     </div>
   </footer>
 
