--- a/faq/index.html
+++ b/faq/index.html
@@ -25,7 +25,7 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -83,12 +83,11 @@
           </div>
         </div>
       </div>
-
-      <div class="copyright">
-        <p>
-          Copyright 2020 | Unplugged
-        </p>
-      </div>
+    </div>
+    <div class="copyright">
+      <p>
+        Copyright 2020 | Unplugged
+      </p>
     </div>
   </footer>
 
