--- a/index.html
+++ b/index.html
@@ -67,28 +67,48 @@
   
     <section class="features">
       <div class="content-wrapper">
+        <h2>
+          Have the work week you always dreamed of — without the bad wifi.
+        </h2>
         <div class="features-items">
           <article>
-            <h2>
-              Have the work week you always dreamed of - without the bad wifi.
-            </h2>
-            <p class="tent-icon"></p>
-            <p class="features-item-description">
-              Locating in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            <p class="fontawesome-icon">
             </p>
-            <p class="bed-icon"></p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
             <p class="features-item-description">
               12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
             </p>
-            <p class="cutlery-icon"></p>
-            <p class="features-item-description">
-              5 outdoor obstacle courses, including privte beach 1/2 mile from bungalow.
+          </article>
+          <article>
+            <p class="fontawesome-icon">
             </p>
-            <p class="face-icon"></p>
+            <p class="features-item-description">
+              Private chef team providing on demand meals - just like your team kitchen.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including private beach ½ mile from bungalow.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
             <p class="features-item-description">
               Retreat facilitator to manage your day to day activities so you all get a chance to reset.
             </p>
-            <p class="wifi-icon"></p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
             <p class="features-item-description">
               Dedicated computer room for times that you must wifi.
             </p>
@@ -138,12 +158,11 @@
           </div>
         </div>
       </div>
-
-      <div class="copyright">
-        <p>
-          Copyright 2020 | Unplugged
-        </p>
-      </div>
+    </div>
+    <div class="copyright">
+      <p>
+        Copyright 2020 | Unplugged
+      </p>
     </div>
   </footer>
 
