--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
         <nav>
           <ul>
@@ -65,7 +65,7 @@
           <input type="text" name="name" value="name@email.com">
           <input type="button" value="Download Itinerary">
         </div>
-      </div>
+      </div><!-- aside content wrapper ends -->
     </aside>
   
     <section class="features">
@@ -122,23 +122,23 @@
   
     <section class="reviews">
       <div class="content-wrapper">
-        <div>
-          <h2>
-            Be a better team in 5 days, like this one.
-          </h2>
-        </div>
+        <h2>
+          Be a better team in 5 days, like this one.
+        </h2>
         <article>
-          <h3>
-            LaCrue Bottling Co. October 2018
-          </h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          </p>
+          <div>
+            <h3>
+              LaCrue Bottling Co. October 2018
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+          </div>
         </article>
       </div>
     </section>
 
-  </main>
+  </main><!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
@@ -153,14 +153,16 @@
           </p>
         </address>
         <div class="social">
+          <h4>
+            Social
+          </h4>
           <div class="social-icons">
-            <h4>Social</h4>
             <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"></a></p>
             <p><a href="https://github.com/mpedrego" target="_blank"></a></p>
             <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"></a></p>
           </div>
         </div>
-      </div>
+      </div><!-- footer content ends -->
     </div>
     <div class="copyright">
       <p>
