--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <script src="https://kit.fontawesome.com/78344bc02e.js" crossorigin="anonymous"></script>
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
@@ -109,11 +110,11 @@
           </p>
         </address>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <h4>Social</h4>
-            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"></a></p>
-            <p><a href="https://github.com/mpedrego" target="_blank"></a></p>
-            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"></a></p>
+            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"><i class="fab fa-facebook"></i></a></p>
+            <p><a href="https://github.com/mpedrego" target="_blank"><i class="fab fa-github"></i></a></p>
+            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"><i class="fab fa-instagram"></i></a></p>
           </div>
         </div>
       </div>
