--- a/index.html
+++ b/index.html
@@ -164,13 +164,11 @@
           </p>
         </address>
         <div class="social">
-          <h4>
-            Social
-          </h4>
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"></a></p>
-            <p><a href="https://github.com/mpedrego" target="_blank"></a></p>
-            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"></a></p>
+            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"><i class="fab fa-facebook"></i></a></p>
+            <p><a href="https://github.com/mpedrego" target="_blank"><i class="fab fa-github"></i></a></p>
+            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"><i class="fab fa-instagram"></i></a></p>
           </div>
         </div>
       </div><!-- footer content ends -->
