--- a/about/index.html
+++ b/about/index.html
@@ -18,8 +18,8 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/78344bc02e.js" crossorigin="anonymous"></script>
-  
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
@@ -27,10 +27,18 @@
 </head>
 
 <body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
       </figure>
       <div class="header-divider"></div>
       <nav>
@@ -112,14 +120,27 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"><i class="fab fa-facebook"></i></a></p>
-            <p><a href="https://github.com/mpedrego" target="_blank"><i class="fab fa-github"></i></a></p>
-            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"><i class="fab fa-instagram"></i></a></p>
+            <p>
+              <a href="https://www.facebook.com/michael.pedrego.56" target="_blank">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </p>
+            <p>
+              <a href="https://github.com/mpedrego" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/lnsl.us/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </p>
           </div>
         </div>
-      </div>
-
+      </div><!-- footer content ends -->
     </div>
+    <!--footer content-wrapper ends-->
+  
     <div class="copyright">
       <p>
         Copyright 2020 | Unplugged
