--- a/faq/index.html
+++ b/faq/index.html
@@ -18,8 +18,8 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/78344bc02e.js" crossorigin="anonymous"></script>
-  
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
@@ -27,6 +27,12 @@
 </head>
 
 <body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+
   <header>
     <div class="content-wrapper">
       <figure>
@@ -43,6 +49,7 @@
   </header>
 
   <main class="faq">
+
     <div class="content-wrapper">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-content">
@@ -66,6 +73,7 @@
           dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
       </div>
     </div> <!-- faq content wrapper ends -->
+    
   </main>
 
   <footer>
@@ -83,13 +91,27 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/michael.pedrego.56" target="_blank"><i class="fab fa-facebook"></i></a></p>
-            <p><a href="https://github.com/mpedrego" target="_blank"><i class="fab fa-github"></i></a></p>
-            <p><a href="https://www.instagram.com/lnsl.us/" target="_blank"><i class="fab fa-instagram"></i></a></p>
+            <p>
+              <a href="https://www.facebook.com/michael.pedrego.56" target="_blank">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </p>
+            <p>
+              <a href="https://github.com/mpedrego" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/lnsl.us/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </p>
           </div>
         </div>
-      </div>
+      </div><!-- footer content ends -->
     </div>
+    <!--footer content-wrapper ends-->
+    
     <div class="copyright">
       <p>
         Copyright 2020 | Unplugged
